将用户验证放入Model模块，添加实体类。

--- a/Book.Naergaga/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Book.Naergaga/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.ExternalLoginListViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>使用其他服务登录。</h4>
