--- a/Book.Naergaga/Areas/Admin/Views/Author/Index.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/Author/Index.cshtml
@@ -11,8 +11,9 @@
 }
 
 @section scripts{
-    <script src="~/Scripts/tablesorter/jquery.tablesorter.combined.js"></script>
     <script src="~/Scripts/Admin/Author/index.js"></script>
+    <script src="~/Scripts/Admin/admin.common.js"></script>
+    <script src="~/Scripts/tablesorter/jquery.tablesorter.combined.js"></script>
 }
 
 <h2>Index</h2>
@@ -44,3 +45,4 @@
     }
 
 </table>
+<div id="modal"></div>
