--- a/Book.Naergaga/Areas/Admin/Views/Shared/_layout.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/Shared/_layout.cshtml
@@ -22,7 +22,11 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("主页", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Book", "Index", "Books")</li>
+                        <li>@Html.ActionLink("Author", "Index", "Author")</li>
+                        <li>@Html.ActionLink("Category", "Index", "Categories")</li>
+                        <li>@Html.ActionLink("Tag", "Index", "Tag")</li>
+                        <li>@Html.ActionLink("BookTags", "Index", "BookTags")</li>
                     </ul>
                 </div>
             </div>
