--- a/Book.Naergaga/Areas/Admin/Views/Author/AuthorEdit.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/Author/AuthorEdit.cshtml
@@ -20,7 +20,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Description, new { @class = "control-label col-sm-2" })
         <div class="col-sm-10">
-            @Html.TextAreaFor(m => m.RealName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.TextAreaFor(m => m.Description,new { @class = "form-control"  })
         </div>
     </div>
     @Html.HiddenFor(m => m.Id)
