--- a/Book.Naergaga/Areas/Admin/Views/Categories/Index.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/Categories/Index.cshtml
@@ -12,6 +12,7 @@
 
 @section scripts{
     <script src="~/Scripts/tablesorter/jquery.tablesorter.combined.js"></script>
+    <script src="~/Scripts/Admin/admin.common.js"></script>
     <script src="~/Scripts/Admin/Categories/index.js"></script>
 }
 
@@ -42,3 +43,5 @@
     }
 
 </table>
+
+<div id="modal"></div>
