--- a/Book.Naergaga/Areas/Admin/Views/Tag/Index.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/Tag/Index.cshtml
@@ -12,18 +12,21 @@
 
 @section scripts{
     <script src="~/Scripts/tablesorter/jquery.tablesorter.combined.js"></script>
+    <script src="~/Scripts/Admin/admin.common.js"></script>
     <script src="~/Scripts/Admin/Tag/index.js"></script>
 }
 
 <h2>Tag</h2>
 
 <div>
+    <p>
+        <a spot="@Url.Action("Create")" class="btnCreateTag">Create</a>
+    </p>
     <table id="myTable" class="hidden">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Text</th>
-                <th class="sorter-false"></th>
                 <th class="sorter-false"></th>
             </tr>
         </thead>
@@ -43,5 +46,5 @@
     </table>
     @Html.Paging(option, "Index", "Tag")
     <hr />
-    @Html.Action("Create")
 </div>
+<div id="modal"></div>
