--- a/Book.Naergaga/Areas/Admin/Views/BookTags/Index.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/BookTags/Index.cshtml
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.Tag.Name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |*@
+            @Html.ActionLink("Delete", "Delete", new { bookId=@item.BookId,tagId=@item.TagId})
         </td>
     </tr>
 }
