--- a/Book.Naergaga/Areas/Admin/Views/BookTags/Create.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/BookTags/Create.cshtml
@@ -22,12 +22,8 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TagId, "TagId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("TagId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.TagId, "", new { @class = "text-danger" })
-            </div>
+        <div>
+           @Html.Partial("TagSet", ViewData["tags"])
         </div>
 
         <div class="form-group">
