--- a/Book.Naergaga/Areas/Admin/Views/Books/Create.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/Books/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create","Books",null,FormMethod.Post,new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -14,6 +14,7 @@
         <h4>EBook</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <input type="file" name="txtFile"/>
         <div class="form-group">
             @Html.LabelFor(model => model.authorId, "authorId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -39,26 +40,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PostTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PostTime, new { htmlAttributes = new { @class = "form-control",type="date" } })
-                @Html.ValidationMessageFor(model => model.PostTime, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Path, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Path, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Path, "", new { @class = "text-danger" })
             </div>
         </div>
 
