--- a/Book.Naergaga/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Book.Naergaga/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.ExternalLoginConfirmationViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "注册";
 }
