--- a/Book.Naergaga/Views/Account/ResetPassword.cshtml
+++ b/Book.Naergaga/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.ResetPasswordViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.ResetPasswordViewModel
 @{
     ViewBag.Title = "重置密码";
 }
