--- a/Book.Naergaga/Views/Account/SendCode.cshtml
+++ b/Book.Naergaga/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.SendCodeViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.SendCodeViewModel
 @{
     ViewBag.Title = "发送";
 }
