--- a/Book.Naergaga/Views/Account/VerifyCode.cshtml
+++ b/Book.Naergaga/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.VerifyCodeViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.VerifyCodeViewModel
 @{
     ViewBag.Title = "验证";
 }
