--- a/Book.Naergaga/Views/Manage/AddPhoneNumber.cshtml
+++ b/Book.Naergaga/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.AddPhoneNumberViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "电话号码";
 }
