--- a/Book.Naergaga/Views/Manage/ChangePassword.cshtml
+++ b/Book.Naergaga/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.ChangePasswordViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.ChangePasswordViewModel
 @{
     ViewBag.Title = "更改密码";
 }
