--- a/Book.Naergaga/Views/Manage/Index.cshtml
+++ b/Book.Naergaga/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.IndexViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.IndexViewModel
 @{
     ViewBag.Title = "管理";
 }
