--- a/Book.Naergaga/Views/Manage/ManageLogins.cshtml
+++ b/Book.Naergaga/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.ManageLoginsViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "管理你的外部登录名";
