--- a/Book.Naergaga/Views/Manage/SetPassword.cshtml
+++ b/Book.Naergaga/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.SetPasswordViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.SetPasswordViewModel
 @{
     ViewBag.Title = "创建密码";
 }
