--- a/Book.Naergaga/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/Book.Naergaga/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.VerifyPhoneNumberViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "验证电话号码";
 }
