--- a/Book.Naergaga/Views/Account/ForgotPassword.cshtml
+++ b/Book.Naergaga/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book.Naergaga.Models.ForgotPasswordViewModel
+﻿@model Book.Naergaga.Models.IdentityViewModel.ForgotPasswordViewModel
 @{
     ViewBag.Title = "忘记了密码?";
 }
