--- a/Book.Naergaga/Views/Shared/_Layout.cshtml
+++ b/Book.Naergaga/Views/Shared/_Layout.cshtml
@@ -1,4 +1,11 @@
-﻿<!DOCTYPE html>
+﻿@using Ninject
+@using Book.Naergaga.Service.ModelService.Interface;
+@{ 
+    var service = Book.Naergaga.App_Start.NinjectWebCommon.GetKernel().Get<ICategoryService>();
+    var categories = service.GetAll();
+}
+
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -19,13 +26,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    @Html.ActionLink("应用程序名称", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    @Html.ActionLink("Book.Naergaga", "HomeBook", "Book", new { area = "" }, new { @class = "navbar-brand" })
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("主页", "Index", "Home")</li>
-                        <li>@Html.ActionLink("关于", "About", "Home")</li>
-                        <li>@Html.ActionLink("联系方式", "Contact", "Home")</li>
+                        @foreach (var item in categories)
+                        {
+                            <li>@Html.ActionLink(item.Name,"CategoryBook","Book",new {categoryId=item.Id },null)</li>
+                        }
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
