--- a/Book.Naergaga/Areas/Admin/Views/BookTags/Index.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/BookTags/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<Book.Naergaga.Models.Entity.BookTags>
-
+﻿@model Book.Naergaga.Models.AdminView.IndexViewModel<Book.Naergaga.Models.Entity.BookTags>
+@using Book.Naergaga.Extensions
 @{
     ViewBag.Title = "Index";
+    var list = Model.List;
 }
 
 <h2>Index</h2>
@@ -12,15 +13,15 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Book.Name)
+            BookName
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Tag.Name)
+            TagName
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in list) {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Book.Name)
@@ -37,3 +38,4 @@
 }
 
 </table>
+@Html.Paging(Model.Option, "Index", "Author")
