--- a/Book.Naergaga/Areas/Admin/Views/Shared/_layout_1.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/Shared/_layout_1.cshtml
@@ -9,6 +9,7 @@
     @RenderSection("css", false)
 </head>
 <body>
+    @RenderSection("body_child",false)
     <div class="container body-content">
         <div class="navbar navbar-default">
             <div class="container-fluid">
@@ -18,7 +19,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    @Html.ActionLink("Naergaga Book", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    @Html.ActionLink("Naergaga Book", "HomeBook", "Book", new { area = "" }, new { @class = "navbar-brand" })
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
