--- a/Book.Naergaga/Views/Shared/Error.cshtml
+++ b/Book.Naergaga/Views/Shared/Error.cshtml
@@ -10,11 +10,19 @@
     <title>@ViewBag.Title</title>
     <meta charset="utf-8" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
+    <style>
+        .container {
+            background-color: white;
+            opacity: 0.9;
+        }
+    </style>
 </head>
 <body>
-    <span class="glyphicon glyphicon-warning-sign"></span>
-    <h1 class="text-danger">Error.</h1>
-    <h2 class="text-info">@Model.Exception.Message</h2>
+    <div class="container">
+        <h3 class="text-danger">Error.</h3>
+        <p class="text-info">@Model.Exception.Message - @Html.ActionLink("Home","HomeBook","Book",new { area=""},null)</p>
+    </div>
     <script src="~/Scripts/jquery-3.1.0.js"></script>
     <script src="~/Scripts/bootstrap.js"></script>
 </body>
