--- a/Book.Naergaga/Views/Shared/_LoginPartial.cshtml
+++ b/Book.Naergaga/Views/Shared/_LoginPartial.cshtml
@@ -5,12 +5,16 @@
     {
     @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("你好，" + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", area = "" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">注销</a></li>
-    </ul>
+        <ul class="nav navbar-nav navbar-right">
+            @if (User.IsInRole("admin"))
+            {
+                <li>@Html.ActionLink("后台", "Index", "Books", routeValues: new { area = "Admin" }, htmlAttributes: null)</li>
+            }
+            <li>
+                @Html.ActionLink("你好，" + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", area = "" })
+            </li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">注销</a></li>
+        </ul>
     }
 }
 else
