--- a/Book.Naergaga/Areas/Admin/Views/Books/Index.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/Books/Index.cshtml
@@ -10,6 +10,17 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+<div class="col-sm-6">
+    @using (Html.BeginForm("Search", "Books", FormMethod.Get))
+    {
+        <div class="input-group">
+            <input type="text" class="form-control" name="keyword" />
+            <span class="input-group-btn">
+                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+            </span>
+        </div>
+    }
+</div>
 <table class="table">
     <tr>
         <th>
@@ -62,4 +73,4 @@
 }
 
 </table>
-@Html.Paging(Model.Option, "Index", "Book")
+@Html.Paging(Model.Option, "Index", "Book",Model.RouteData)
