--- a/Book.Naergaga/Areas/Admin/Views/Categories/Index.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/Categories/Index.cshtml
@@ -25,27 +25,41 @@
 <p>
     <a spot="@Url.Action("Create")" class="btnCreateCategory">Create</a>
 </p>
-<table id="myTable" class="hidden">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Catgory</th>
-            <th></th>
-        </tr>
-    </thead>
-    @foreach (var item in categories)
+<div class="col-sm-6">
+    @using (Html.BeginForm("Search", "Categories", FormMethod.Get))
     {
-        <tr>
-            <td>@item.Id</td>
-            <td>@item.Name</td>
-            <td>
-                <a spot="@Url.Action("Delete",new { id = item.Id })" class="btnDelCategory">Delete</a> |
-                <a spot="@Url.Action("Edit",new { id = item.Id })" class="btnEditCategory">Edit</a> |
-                @Html.ActionLink("Details", "Details", new { id = item.Id })
-            </td>
-        </tr>
+        <div class="input-group">
+            <input type="text" class="form-control" name="keyword" />
+            <span class="input-group-btn">
+                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+            </span>
+        </div>
     }
+</div>
+@if (categories != null)
+{
+    <table id="myTable" class="hidden">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Catgory</th>
+                <th></th>
+            </tr>
+        </thead>
+        @foreach (var item in categories)
+        {
+            <tr>
+                <td>@item.Id</td>
+                <td>@item.Name</td>
+                <td>
+                    <a spot="@Url.Action("Delete",new { id = item.Id })" class="btnDelCategory">Delete</a> |
+                    <a spot="@Url.Action("Edit",new { id = item.Id })" class="btnEditCategory">Edit</a> |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
+                </td>
+            </tr>
+        }
 
-</table>
-@Html.Paging(Model.Option, "Index", "Author")
+    </table>
+    @Html.Paging(Model.Option, "Index", "Author")
 
+}
