--- a/Book.Naergaga/Areas/Admin/Views/Tag/Index.cshtml
+++ b/Book.Naergaga/Areas/Admin/Views/Tag/Index.cshtml
@@ -26,29 +26,41 @@
     <p>
         <a spot="@Url.Action("Create")" class="btnCreateTag">Create</a>
     </p>
-    <table id="myTable" class="hidden">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Text</th>
-                <th class="sorter-false"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in tags)
-            {
+    <div class="col-sm-6">
+        <form action="/Admin/Tag/Search" method="get">
+            <div class="input-group">
+                <input type="text" class="form-control" name="keyword" />
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+                </span>
+            </div>
+        </form>
+    </div>
+    @if (tags != null)
+    {
+        <table id="myTable" class="hidden">
+            <thead>
                 <tr>
-                    <td>@item.Id</td>
-                    <td>@item.Name</td>
-                    <td>
-                        <a spot="@Url.Action("Delete",new { id = item.Id })" class="btnDelTag">Delete</a>
-                        <a spot="@Url.Action("Edit",new { id = item.Id })" class="btnEditTag">Edit</a>
-                    </td>
+                    <th>Id</th>
+                    <th>Text</th>
+                    <th class="sorter-false"></th>
                 </tr>
-            }
-        </tbody>
-    </table>
-    @Html.Paging(option, "Index", "Tag")
+            </thead>
+            <tbody>
+                @foreach (var item in tags)
+                {
+                    <tr>
+                        <td>@item.Id</td>
+                        <td>@item.Name</td>
+                        <td>
+                            <a spot="@Url.Action("Delete",new { id = item.Id })" class="btnDelTag">Delete</a>
+                            <a spot="@Url.Action("Edit",new { id = item.Id })" class="btnEditTag">Edit</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        @Html.Paging(option, "Index", "Tag", Model.RouteData)
+    }
     <hr />
 </div>
-
