--- a/Book.Naergaga/Views/Shared/_SearchPartial.cshtml
+++ b/Book.Naergaga/Views/Shared/_SearchPartial.cshtml
@@ -10,5 +10,5 @@
     <div class="form-group">
         @Html.EditorFor(m => m.Keyword, new { HtmlAttributes=new {@class="form-control" } })
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
 }
